--- a/content/docs/index.mdx
+++ b/content/docs/index.mdx
@@ -14,6 +14,10 @@ headers:
 
 This is generated from `content/docs/index.mdx`.
 
+{% quick-links %}
+{% quick-link title="Installation" href="/docs/getting-started" description="Step-by-step guides to setting up your system and installing the library." /%}
+{% quick-link title="Architecture guide" href="/docs/installation" description="Learn how the internals work and contribute." /%}
+{% /quick-links %}
 
 {% callout title="You should know!" %}
 This is what a disclaimer message looks like. You might want to include inline code in it. Or maybe you’ll want to include a link in it. I don’t think we should get too carried away with other scenarios like lists or tables — that would be silly. 
