--- a/content/docs/index.mdx
+++ b/content/docs/index.mdx
@@ -15,8 +15,8 @@ headers:
 This is generated from `content/docs/index.mdx`.
 
 {% quick-links %}
-{% quick-link title="Installation" href="/docs/getting-started" description="Step-by-step guides to setting up your system and installing the library." /%}
-{% quick-link title="Architecture guide" href="/docs/installation" description="Learn how the internals work and contribute." /%}
+{% quick-link title="Getting Started" href="/docs/getting-started" description="Learn how things work, and why they do" /%}
+{% quick-link title="Installation" href="/docs/installation" description="Step-by-step guides to setting up your system and installing the app" /%}
 {% /quick-links %}
 
 {% callout title="You should know!" %}
