--- a/content/docs/changelog.mdx
+++ b/content/docs/changelog.mdx
@@ -19,7 +19,9 @@ Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean tristique nisl v
 
 Sed pellentesque, nulla et fringilla venenatis, nulla nibh auctor tortor, eget ullamcorper justo massa sed dui. Etiam lacinia sit amet dui vel vestibulum. Morbi dapibus dapibus facilisis. Phasellus viverra, dolor non vulputate tempus, sapien sem lobortis massa, sit amet dapibus magna libero eu lorem. Curabitur posuere placerat justo, vel dapibus orci vehicula quis. Cras tincidunt ante quis leo tincidunt sodales. Duis id orci vitae ante tincidunt interdum. Proin lacus odio, consequat eu massa nec, sollicitudin maximus lectus. Donec commodo leo id condimentum vulputate. Donec gravida venenatis sapien, sed eleifend arcu fringilla interdum. Vestibulum dapibus dui id nibh consequat, at cursus massa pellentesque. Morbi vitae accumsan leo. Sed tincidunt purus et velit fermentum, in ultricies elit eleifend. Integer placerat vitae metus non interdum.
 
-```jsx:test.js
+```jsx
+// test.js
+
 // sample code block
 console.log("dddd");
 
